--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@next/font": "^14.2.15",
+    "geist": "^1.5.1",
     "groq-sdk": "^0.32.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
