--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.920.0",
     "@google/generative-ai": "^0.24.1",
     "@next/font": "^14.2.15",
     "geist": "^1.5.1",
