--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@aws-sdk/client-ssm": "^3.920.0",
     "@google/generative-ai": "^0.24.1",
     "@next/font": "^14.2.15",
+    "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "groq-sdk": "^0.32.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,7 +29,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
